:bookmark: Add React, delete a period

--- a/resume.tex
+++ b/resume.tex
@@ -171,8 +171,8 @@
 \section{SKILLS}
  \begin{itemize}[leftmargin=0in, label={}]
     \small{\item{
-     \textbf{Languages}    {| Python, Java, JavaScript, HTML/CSS.}\vspace{2pt} \\
-     \textbf{Technologies} {| Websockets, API, Event Handling}\vspace{2pt} \\
+     \textbf{Languages}    {| Python, Java, JavaScript, HTML/CSS}\vspace{2pt} \\
+     \textbf{Technologies} {| Websockets, API, Event Handling, React}\vspace{2pt} \\
      \textbf{Tools}        {| Figma, Notion, Trello, Git, Adobe Photoshop}
     }}
  \end{itemize}
