format: underline hrefs

--- a/resume.tex
+++ b/resume.tex
@@ -87,8 +87,10 @@
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
 	\textbf{{\LARGE Katherine Shen}} 
 		& 
-	\href{https://github.com/shenkw1}{github.com/shenkw1}\\
-	\href{mailto:katherineshen@gatech.edu}{katherineshen@gatech.edu}
+	\href{https://github.com/shenkw1}
+        {\underline{github.com/shenkw1}}\\
+    \href{mailto:katherineshen@gatech.edu}
+        {\underline{katherineshen@gatech.edu}}
 		&(443) 766-2382 \\
 \end{tabular*}
 
