format: remove underline

--- a/resume.tex
+++ b/resume.tex
@@ -88,9 +88,9 @@
 	\textbf{{\LARGE Katherine Shen}} 
 		& 
 	\href{https://github.com/shenkw1}
-        {\underline{github.com/shenkw1}}\\
+        {github.com/shenkw1}\\
     \href{mailto:katherineshen@gatech.edu}
-        {\underline{katherineshen@gatech.edu}}
+        {katherineshen@gatech.edu}
 		&(443) 766-2382 \\
 \end{tabular*}
 
