--- a/resume.tex
+++ b/resume.tex
@@ -106,10 +106,11 @@
                 Media/Graphics \& Information Internetworks
 			}}}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Courses:}
-                \textit{Computer Architecture}, \textit{Applied Combinatorics},
-                Objects \& Design, Discrete Mathematics
+                \textit{Algorithm Design}, \textit{Computer Graphics}, 
+                Computer Architecture, Applied Combinatorics,
+                Objects \& Design, 
                 \hspace{\linewidth} \hspace*{41pt}
-                Data Sturctures \& Algorithms,
+                Discrete Mathematics, Data Sturctures \& Algorithms,
                 Object-Orientated Programming, Linear Algebra
 			}}}
 
@@ -125,9 +126,12 @@
         \resumeSubheading
             {Georgia Tech Research Institute}
             {Atlanta, GA}
-            {Incoming Software Engineering Intern}
+            {Software Engineering Intern}
             {May 2022 -- Aug 2022}
-        \vspace{-1mm}
+        \resumeItemListStart
+            \resumeItem{Working on AI/ML Computer Vision data analysis and 
+                visualization tooling using React}
+        \resumeItemListEnd
         \resumeSubheading
             {Johns Hopkins University Applied Physics Lab}
             {Laurel, MD}
