clarify SWE position (research) for GTRI

--- a/resume.tex
+++ b/resume.tex
@@ -126,7 +126,7 @@
         \resumeSubheading
             {Georgia Tech Research Institute}
             {Atlanta, GA}
-            {Software Engineering Intern}
+            {Research Software Engineering Intern}
             {May 2022 -- Aug 2022}
         \resumeItemListStart
             \resumeItem{Working on AI/ML Computer Vision data analysis and 
