edit gtri bullet point to reflect project in more detail, minor spelling changes, commented ccna cert in progress

--- a/resume.tex
+++ b/resume.tex
@@ -129,8 +129,9 @@
             {Research Software Engineering Intern}
             {May 2022 -- Aug 2022}
         \resumeItemListStart
-            \resumeItem{Working on AI/ML Computer Vision data analysis and 
-                visualization tooling using React}
+            \resumeItem{Helping users identify issues and adjust machine algorithms
+                efficiently by developing an error analysis visualization tool for
+                machine learning models using React, Flask, and Pandas}
         \resumeItemListEnd
         \resumeSubheading
             {Johns Hopkins University Applied Physics Lab}
@@ -179,7 +180,7 @@
         \resumeItemListStart
             \resumeItem{Provided quick tournament lookup information for
                 regional and global events through Discord bot}
-            \resumeItem{Consumed Riot Games E-Sports API to get accurate, live
+            \resumeItem{Consumed Riot Games Esports API to get accurate, live
                 tournament information}
             \resumeItem{Utilized formatting algorithms with data structures to
                 display information sent to Discord using \texttt{discord.py}}
@@ -211,6 +212,8 @@
             {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Trello, Git, Adobe
                 Photoshop}
 		\resumeSubItem{Technologies}
-			{~~~~Websockets, API, Event Handling, React}
+			{~~~~Websockets, API, Event Handling, React, Flask}
+        % \resumeSubItem{Certifications}
+		% 	{~~~CCNA (In Progress)}
 	\resumeSubHeadingListEnd
 \end{document}
