add research assistant position, expand on gtri position, add 2340 project, minor formatting changes

--- a/resume.tex
+++ b/resume.tex
@@ -103,7 +103,7 @@
             {Aug. 2020 -- May 2024}
 			\vspace{-3pt}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Concentration:}
-                Media/Graphics \& Information Internetworks
+                Graphics \& Information Internetworks
 			}}}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Courses:}
                 \textit{Algorithm Design}, \textit{Computer Graphics}, 
@@ -126,17 +126,24 @@
         \resumeSubheading
             {Georgia Tech Research Institute}
             {Atlanta, GA}
+            {Research Assistant}
+            {Aug. 2022 -- Dec. 2022}
+        \resumeSubheading
+            {Georgia Tech Research Institute}
+            {Atlanta, GA}
             {Research Software Engineering Intern}
-            {May 2022 -- Aug 2022}
+            {May 2022 -- Jul. 2022}
         \resumeItemListStart
-            \resumeItem{Helping users identify issues and adjust machine algorithms
+            \resumeItem{Assisted users in identifying issues and adjusting machine algorithms
                 efficiently by developing an error analysis visualization tool for
                 machine learning models using React, Flask, and Pandas}
+            \resumeItem{Designed and implemented data architecture to allow the tool to
+                communicate seamlessly with the database}
         \resumeItemListEnd
         \resumeSubheading
             {Johns Hopkins University Applied Physics Lab}
             {Laurel, MD}
-            {Computer Science ASPIRE Intern}
+            {Software Engineering Intern}
             {Jun. 2018 -- Jun. 2020}
         \resumeItemListStart
             \resumeItem{Reduced average time for locating parking spot on APL
@@ -166,42 +173,48 @@
                 media, and game-specific designs}
             \resumeItem{Integrated creative department into game sub-organizations
                 to produce ad-hoc graphics for large events}
-             \resumeItem{Managed budget and allocated funds for competitive teams, various events, and organization costs}
+             \resumeItem{Managed budget and allocated funds for competitive teams, various events,
+                and organization costs}
         \resumeItemListEnd
 	\resumeSubHeadingListEnd
 
 \section{Projects}
     \resumeSubHeadingListStart
-      \vspace{1mm}
-      \resumeProjectHeading
-          {gamelettr}
-          {Python, Websockets, Event Handling, REST APIs}
-          {Jul. 2021}
-        \resumeItemListStart
-            \resumeItem{Provided quick tournament lookup information for
-                regional and global events through Discord bot}
-            \resumeItem{Consumed Riot Games Esports API to get accurate, live
-                tournament information}
-            \resumeItem{Utilized formatting algorithms with data structures to
-                display information sent to Discord using \texttt{discord.py}}
-            \resumeItem{
-                Developed a scheduler to deliver notifications with a stream link for upcoming matches for ease of viewing
-            }
-        \resumeItemListEnd
+    \vspace{1mm}
         \resumeProjectHeading
-        {Energy Consumption Analysis (2020 HackGT 7)}
-        {Dash, Plotly.js, Pandas, numpy}
-        {Oct. 2020}
-        \resumeItemListStart
-            \resumeItem{
-                Contributed to a decision tree anomaly detection model
-                built to detect energy usage anomalies
-            }
-            \resumeItem{
-                Visualized data output by from decision tree using Plotly
-                graphs and a Dash app
-            }
-        \resumeItemListEnd
+            {Martian Defense 3000}
+            {Java, JavaFX, JUnit, Figma}
+            {Sept. 2021}
+            \resumeItemListStart
+                \resumeItem{Created a space themed tower defense game with 4 other classmates}
+                \resumeItem{Designed and implemented multiple game screens and sprites}
+                \resumeItem{Wrote a variety of JUnit tests to test correct functionality
+                    of the game}
+            \resumeItemListEnd
+        \resumeProjectHeading
+            {gamelettr}
+            {Python, Websockets, Event Handling, REST APIs}
+            {Jul. 2021}
+            \resumeItemListStart
+                \resumeItem{Provided quick tournament lookup information for
+                    regional and global events through Discord bot}
+                \resumeItem{Consumed Riot Games Esports API to get accurate, live
+                    tournament information}
+                \resumeItem{Utilized formatting algorithms with data structures to
+                    display information sent to Discord using \texttt{discord.py}}
+                \resumeItem{Developed a scheduler to deliver notifications with
+                    a stream link for upcoming matches for ease of viewing}
+            \resumeItemListEnd
+        \resumeProjectHeading
+            {Energy Consumption Analysis (2020 HackGT 7)}
+            {Dash, Plotly.js, Pandas, numpy}
+            {Oct. 2020}
+            \resumeItemListStart
+                \resumeItem{Contributed to a decision tree anomaly detection model
+                    built to detect energy usage anomalies}
+                \resumeItem{Visualized data output by from decision tree using Plotly
+                    graphs and a Dash app}
+            \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 \section{Skills Summary}
