add c, assembly lc3, languages

--- a/resume.tex
+++ b/resume.tex
@@ -219,13 +219,15 @@
 
 \section{Skills Summary}
 	\resumeSubHeadingListStart
-		\resumeSubItem{Languages}
-			{\hspace{0.6mm}~~~~~~~Python, Java, JavaScript, HTML/CSS, \LaTeX}
+		\resumeSubItem{Programming}
+			{\hspace{0.6mm}~~Python, Java, JavaScript, HTML/CSS, C, \LaTeX, Assembly (LC-3)}
 		\resumeSubItem{Tools}
             {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Trello, Git, Adobe
                 Photoshop}
 		\resumeSubItem{Technologies}
 			{~~~~Websockets, API, Event Handling, React, Flask}
+        \resumeSubItem{Languages}
+			{\hspace{0.6mm}~~~~~~~English (native), Chinese (fluent)}
         % \resumeSubItem{Certifications}
 		% 	{~~~CCNA (In Progress)}
 	\resumeSubHeadingListEnd
