--- a/resume.tex
+++ b/resume.tex
@@ -100,7 +100,7 @@
 		\resumeSubheading
 			{Georgia Institute of Technology}{Atlanta, GA}
 			{Bachelors of Science in Computer Science}
-            {Aug. 2020 -- May 2024}
+            {Aug 2020 -- May 2024}
 			\vspace{-3pt}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Concentration:}
                 Graphics \& Information Internetworks
@@ -113,12 +113,6 @@
                 Discrete Mathematics, Data Sturctures \& Algorithms,
                 Object-Orientated Programming, Linear Algebra
 			}}}
-
-		\resumeSubheading
-			{River Hill High School}{Clarksville, MD}
-			{High School Diploma (Rank 5/298)}
-            {Sep. 2016 -- May 2020}
-			{}{}
 	\resumeSubHeadingListEnd
 
 \section{Experience}
@@ -127,12 +121,12 @@
             {Georgia Tech Research Institute}
             {Atlanta, GA}
             {Research Assistant}
-            {Aug. 2022 -- Dec. 2022}
+            {Aug 2022 -- Present}
         \resumeSubheading
             {Georgia Tech Research Institute}
             {Atlanta, GA}
             {Research Software Engineering Intern}
-            {May 2022 -- Jul. 2022}
+            {May 2022 -- Jul 2022}
         \resumeItemListStart
             \resumeItem{Assisted users in identifying issues and adjusting machine algorithms
                 efficiently by developing an error analysis visualization tool for
@@ -144,7 +138,7 @@
             {Johns Hopkins University Applied Physics Lab}
             {Laurel, MD}
             {Software Engineering Intern}
-            {Jun. 2018 -- Jun. 2020}
+            {Jun 2018 -- Jun 2020}
         \resumeItemListStart
             \resumeItem{Reduced average time for locating parking spot on APL
                 campus with OpenCV and image recognition}
@@ -163,7 +157,7 @@
             {GT Esports}
             {Atlanta, GA}
             {Vice President, Head of Creative Department, Treasurer}
-            {Sept. 2020 -- Present}
+            {Sep 2020 -- Present}
         \resumeItemListStart
             \resumeItem{Restructured organization by interiewing/onboarding new
                 staff and creating new procedures}
@@ -184,7 +178,7 @@
         \resumeProjectHeading
             {Martian Defense 3000}
             {Java, JavaFX, JUnit, Figma}
-            {Sept. 2021}
+            {}
             \resumeItemListStart
                 \resumeItem{Created a space themed tower defense game with 4 other classmates}
                 \resumeItem{Designed and implemented multiple game screens and sprites}
@@ -194,7 +188,7 @@
         \resumeProjectHeading
             {gamelettr}
             {Python, Websockets, Event Handling, REST APIs}
-            {Jul. 2021}
+            {}
             \resumeItemListStart
                 \resumeItem{Provided quick tournament lookup information for
                     regional and global events through Discord bot}
@@ -208,7 +202,7 @@
         \resumeProjectHeading
             {Energy Consumption Analysis (2020 HackGT 7)}
             {Dash, Plotly.js, Pandas, numpy}
-            {Oct. 2020}
+            {}
             \resumeItemListStart
                 \resumeItem{Contributed to a decision tree anomaly detection model
                     built to detect energy usage anomalies}
