revamp bullet points under GTRI SWE

--- a/resume.tex
+++ b/resume.tex
@@ -103,7 +103,7 @@
             {Aug 2020 -- May 2024}
 			\vspace{-3pt}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Concentration:}
-                Graphics \& Information Internetworks
+                Graphics \& Systems Engineering/Networking
 			}}}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Courses:}
                 \textit{Algorithm Design}, \textit{Computer Graphics}, 
@@ -128,11 +128,12 @@
             {Research Software Engineering Intern}
             {May 2022 -- Jul 2022}
         \resumeItemListStart
-            \resumeItem{Assisted users in identifying issues and adjusting machine algorithms
-                efficiently by developing an error analysis visualization tool for
-                machine learning models using React, Flask, and Pandas}
-            \resumeItem{Designed and implemented data architecture to allow the tool to
-                communicate seamlessly with the database}
+            \resumeItem{Assisted users in identifying issues with ML
+                algorithms by developing an error analysis visualization tool}
+            \resumeItem{Iterated continuously on various dashboard designs and
+                visualizations to maximize user experience with React}
+            \resumeItem{Designed data architecture to allow seamless
+                communication with database in Flask and Pandas}
         \resumeItemListEnd
         \resumeSubheading
             {Johns Hopkins University Applied Physics Lab}
