clarifications/formatting + replace 2340 proj with 2110 proj

--- a/resume.tex
+++ b/resume.tex
@@ -99,7 +99,7 @@
 	\resumeSubHeadingListStart
 		\resumeSubheading
 			{Georgia Institute of Technology}{Atlanta, GA}
-			{Bachelors of Science in Computer Science}
+			{Bachelor's of Science in Computer Science}
             {Aug 2020 -- May 2024}
 			\vspace{-3pt}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Concentration:}
@@ -128,12 +128,12 @@
             {Research Software Engineering Intern}
             {May 2022 -- Jul 2022}
         \resumeItemListStart
-            \resumeItem{Assisted users in identifying issues with ML
-                algorithms by developing an error analysis visualization tool}
+            \resumeItem{Assisted in identifying issues with user-uploaded ML
+                models by developing an error analysis visualization tool}
             \resumeItem{Iterated continuously on various dashboard designs and
                 visualizations to maximize user experience with React}
             \resumeItem{Designed data architecture to allow seamless
-                communication with database in Flask and Pandas}
+                communication with database in Flask and pandas}
         \resumeItemListEnd
         \resumeSubheading
             {Johns Hopkins University Applied Physics Lab}
@@ -177,14 +177,16 @@
     \resumeSubHeadingListStart
     \vspace{1mm}
         \resumeProjectHeading
-            {Martian Defense 3000}
-            {Java, JavaFX, JUnit, Figma}
+            {MVP}
+            {C, Gameboy Advanced, DMA}
             {}
             \resumeItemListStart
-                \resumeItem{Created a space themed tower defense game with 4 other classmates}
-                \resumeItem{Designed and implemented multiple game screens and sprites}
-                \resumeItem{Wrote a variety of JUnit tests to test correct functionality
-                    of the game}
+                \resumeItem{Created a simple game that required the user to move
+                    a sprite into the goal area in the shortest amount of time}
+                \resumeItem{Implemented game logic with a state machine to correctly
+                    display game screens throughout playthrough}
+                \resumeItem{Ensured smooth transitions and animations within the game
+                    by utilizing DMA}
             \resumeItemListEnd
         \resumeProjectHeading
             {gamelettr}
@@ -202,10 +204,10 @@
             \resumeItemListEnd
         \resumeProjectHeading
             {Energy Consumption Analysis (2020 HackGT 7)}
-            {Dash, Plotly.js, Pandas, numpy}
+            {Dash, Plotly.js, pandas, NumPy}
             {}
             \resumeItemListStart
-                \resumeItem{Contributed to a decision tree anomaly detection model
+                \resumeItem{Built to a decision tree anomaly detection model
                     built to detect energy usage anomalies}
                 \resumeItem{Visualized data output by from decision tree using Plotly
                     graphs and a Dash app}
