--- a/resume.tex
+++ b/resume.tex
@@ -110,7 +110,7 @@
                 Computer Architecture, Applied Combinatorics,
                 Objects \& Design, 
                 \hspace{\linewidth} \hspace*{41pt}
-                Discrete Mathematics, Data Sturctures \& Algorithms,
+                Discrete Mathematics, Data Structures \& Algorithms,
                 Object-Orientated Programming, Linear Algebra
 			}}}
 	\resumeSubHeadingListEnd
