reword vip bullets, rewrite content for gtri fall 22 role after looking at files on work pc, shorten to 2 pages

--- a/resume.tex
+++ b/resume.tex
@@ -117,11 +117,32 @@
 
 \section{Experience}
 	\resumeSubHeadingListStart
+    \resumeSubheading
+        {Vertically Integrated Projects}
+        {Atlanta, GA}
+        {Getting to Know U - Provost Data Dashboard Design}
+        {Aug 2022 -- Present}
+    \resumeItemListStart
+        \resumeItem{Analyzed Georgia Tech population distribution
+        across different majors, credit hours, graduation rates, etc}
+        \resumeItem{Iterated and improved existing dashboard designs
+        already in the provost system}
+        \resumeItem{Performed UX audits and built design systems to
+        create dashboards for new datasets}
+    \resumeItemListEnd
+
         \resumeSubheading
             {Georgia Tech Research Institute}
             {Atlanta, GA}
             {Research Assistant}
             {Aug 2022 -- Present}
+        \resumeItemListStart
+            \resumeItem{Transitioned outdated flight manual iPad app to React
+            webpage}
+            \resumeItem{Developed Python script to easily parse styling information
+            from Excel spreadsheets}
+        \resumeItemListEnd
+
         \resumeSubheading
             {Georgia Tech Research Institute}
             {Atlanta, GA}
@@ -135,6 +156,7 @@
             \resumeItem{Designed data architecture to allow seamless
                 communication with database in Flask and pandas}
         \resumeItemListEnd
+
         \resumeSubheading
             {Johns Hopkins University Applied Physics Lab}
             {Laurel, MD}
@@ -188,6 +210,7 @@
                 \resumeItem{Ensured smooth transitions and animations within the game
                     by utilizing DMA}
             \resumeItemListEnd
+
         \resumeProjectHeading
             {gamelettr}
             {Python, Websockets, Event Handling, REST APIs}
@@ -202,6 +225,7 @@
                 \resumeItem{Developed a scheduler to deliver notifications with
                     a stream link for upcoming matches for ease of viewing}
             \resumeItemListEnd
+
         \resumeProjectHeading
             {Energy Consumption Analysis (2020 HackGT 7)}
             {Dash, Plotly.js, pandas, NumPy}
@@ -217,7 +241,7 @@
 \section{Skills Summary}
 	\resumeSubHeadingListStart
 		\resumeSubItem{Programming}
-			{\hspace{0.6mm}~~Python, Java, JavaScript, HTML/CSS, C, \LaTeX, Assembly (LC-3)}
+			{\hspace{0.6mm}~~Python, Java, JavaScript, HTML/CSS, TypeScript, C, \LaTeX, Assembly (LC-3)}
 		\resumeSubItem{Tools}
             {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Trello, Git, Adobe
                 Photoshop}
