comment out extracurricular to reduce to one page, reword new content

--- a/resume.tex
+++ b/resume.tex
@@ -137,10 +137,12 @@
             {Research Assistant}
             {Aug 2022 -- Present}
         \resumeItemListStart
-            \resumeItem{Transitioned outdated flight manual iPad app to React
-            webpage}
-            \resumeItem{Developed Python script to easily parse styling information
-            from Excel spreadsheets}
+            \resumeItem{Transitioned emergency procedure manual iPad application
+            to React webpage with newer features}
+            \resumeItem{Developed Python script to parse styling information
+            from Excel sheet database in order to render on webpage}
+            \resumeItem{Added features to enhance user experience,
+            such as allowing users to add, remove, or edit emergency manuals}
         \resumeItemListEnd
 
         \resumeSubheading
@@ -174,26 +176,26 @@
         \resumeItemListEnd
 	\resumeSubHeadingListEnd
 
-\section{Extracurriculars}
-	\resumeSubHeadingListStart
-        \resumeSubheading
-            {GT Esports}
-            {Atlanta, GA}
-            {Vice President, Head of Creative Department, Treasurer}
-            {Sep 2020 -- Present}
-        \resumeItemListStart
-            \resumeItem{Restructured organization by interiewing/onboarding new
-                staff and creating new procedures}
-            \resumeItem{Boosted and promoted member engagement by implementing
-                policies to increase member participation}
-            \resumeItem{Managed creative team of 7 creating website, social
-                media, and game-specific designs}
-            \resumeItem{Integrated creative department into game sub-organizations
-                to produce ad-hoc graphics for large events}
-             \resumeItem{Managed budget and allocated funds for competitive teams, various events,
-                and organization costs}
-        \resumeItemListEnd
-	\resumeSubHeadingListEnd
+% \section{Extracurriculars}
+% 	\resumeSubHeadingListStart
+%         \resumeSubheading
+%             {GT Esports}
+%             {Atlanta, GA}
+%             {Vice President, Head of Creative Department, Treasurer}
+%             {Sep 2020 -- Present}
+%         \resumeItemListStart
+%             \resumeItem{Restructured organization by interiewing/onboarding new
+%                 staff and creating new procedures}
+%             \resumeItem{Boosted and promoted member engagement by implementing
+%                 policies to increase member participation}
+%             \resumeItem{Managed creative team of 7 creating website, social
+%                 media, and game-specific designs}
+%             \resumeItem{Integrated creative department into game sub-organizations
+%                 to produce ad-hoc graphics for large events}
+%              \resumeItem{Managed budget and allocated funds for competitive teams, various events,
+%                 and organization costs}
+%         \resumeItemListEnd
+% 	\resumeSubHeadingListEnd
 
 \section{Projects}
     \resumeSubHeadingListStart
