comment out vip readd esports

--- a/resume.tex
+++ b/resume.tex
@@ -117,19 +117,19 @@
 
 \section{Experience}
 	\resumeSubHeadingListStart
-    \resumeSubheading
-        {Vertically Integrated Projects}
-        {Atlanta, GA}
-        {Getting to Know U - Provost Data Dashboard Design}
-        {Aug 2022 -- Present}
-    \resumeItemListStart
-        \resumeItem{Analyzed Georgia Tech population distribution
-        across different majors, credit hours, graduation rates, etc}
-        \resumeItem{Iterated and improved existing dashboard designs
-        already in the provost system}
-        \resumeItem{Performed UX audits and built design systems to
-        create dashboards for new datasets}
-    \resumeItemListEnd
+%     \resumeSubheading
+%         {Vertically Integrated Projects}
+%         {Atlanta, GA}
+%         {Getting to Know U - Provost Data Dashboard Design}
+%         {Aug 2022 -- Present}
+%     \resumeItemListStart
+%         \resumeItem{Analyzed Georgia Tech population distribution
+%         across different majors, credit hours, graduation rates, etc}
+%         \resumeItem{Iterated and improved existing dashboard designs
+%         already in the provost system}
+%         \resumeItem{Performed UX audits and built design systems to
+%         create dashboards for new datasets}
+%     \resumeItemListEnd
 
         \resumeSubheading
             {Georgia Tech Research Institute}
@@ -176,26 +176,26 @@
         \resumeItemListEnd
 	\resumeSubHeadingListEnd
 
-% \section{Extracurriculars}
-% 	\resumeSubHeadingListStart
-%         \resumeSubheading
-%             {GT Esports}
-%             {Atlanta, GA}
-%             {Vice President, Head of Creative Department, Treasurer}
-%             {Sep 2020 -- Present}
-%         \resumeItemListStart
-%             \resumeItem{Restructured organization by interiewing/onboarding new
-%                 staff and creating new procedures}
-%             \resumeItem{Boosted and promoted member engagement by implementing
-%                 policies to increase member participation}
-%             \resumeItem{Managed creative team of 7 creating website, social
-%                 media, and game-specific designs}
-%             \resumeItem{Integrated creative department into game sub-organizations
-%                 to produce ad-hoc graphics for large events}
-%              \resumeItem{Managed budget and allocated funds for competitive teams, various events,
-%                 and organization costs}
-%         \resumeItemListEnd
-% 	\resumeSubHeadingListEnd
+\section{Extracurriculars}
+	\resumeSubHeadingListStart
+        \resumeSubheading
+            {GT Esports}
+            {Atlanta, GA}
+            {Vice President, Head of Creative Department, Treasurer}
+            {Sep 2020 -- Present}
+        \resumeItemListStart
+            \resumeItem{Restructured organization by interiewing/onboarding new
+                staff and creating new procedures}
+            \resumeItem{Boosted and promoted member engagement by implementing
+                policies to increase member participation}
+            \resumeItem{Managed creative team of 7 creating website, social
+                media, and game-specific designs}
+            \resumeItem{Integrated creative department into game sub-organizations
+                to produce ad-hoc graphics for large events}
+             \resumeItem{Managed budget and allocated funds for competitive teams, various events,
+                and organization costs}
+        \resumeItemListEnd
+	\resumeSubHeadingListEnd
 
 \section{Projects}
     \resumeSubHeadingListStart
