add major gpa, modify course list, add opengl

--- a/resume.tex
+++ b/resume.tex
@@ -99,19 +99,18 @@
 	\resumeSubHeadingListStart
 		\resumeSubheading
 			{Georgia Institute of Technology}{Atlanta, GA}
-			{Bachelor's of Science in Computer Science}
+			{Bachelor's of Science in Computer Science, Major GPA: 3.63}
             {Aug 2020 -- May 2024}
 			\vspace{-3pt}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Concentration:}
                 Graphics \& Systems Engineering/Networking
 			}}}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Courses:}
-                \textit{Algorithm Design}, \textit{Computer Graphics}, 
-                Computer Architecture, Applied Combinatorics,
-                Objects \& Design, 
-                \hspace{\linewidth} \hspace*{41pt}
-                Discrete Mathematics, Data Structures \& Algorithms,
-                Object-Orientated Programming, Linear Algebra
+                \textit{Systems and Networks}, \textit{Intro to Databases}, 
+                Algorithm Design, Computer Graphics,
+                Computer Architecture,
+                \hspace{\linewidth} \hspace*{41pt} Applied Combinatorics, Objects \& Design,
+                Data Structures \& Algorithms, Object-Orientated Programming
 			}}}
 	\resumeSubHeadingListEnd
 
@@ -243,7 +242,7 @@
 \section{Skills Summary}
 	\resumeSubHeadingListStart
 		\resumeSubItem{Programming}
-			{\hspace{0.6mm}~~Python, Java, JavaScript, HTML/CSS, TypeScript, C, \LaTeX, Assembly (LC-3)}
+			{\hspace{0.6mm}~~Python, Java, JavaScript, OpenGL, HTML/CSS, TypeScript, C, \LaTeX, Assembly (LC-3)}
 		\resumeSubItem{Tools}
             {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Trello, Git, Adobe
                 Photoshop}
