swap out obj and design for linear alg

--- a/resume.tex
+++ b/resume.tex
@@ -109,7 +109,7 @@
                 \textit{Systems and Networks}, \textit{Intro to Databases}, 
                 Algorithm Design, Computer Graphics,
                 Computer Architecture,
-                \hspace{\linewidth} \hspace*{41pt} Applied Combinatorics, Objects \& Design,
+                \hspace{\linewidth} \hspace*{41pt} Applied Combinatorics, Linear Algebra,
                 Data Structures \& Algorithms, Object-Orientated Programming
 			}}}
 	\resumeSubHeadingListEnd
