--- a/resume.tex
+++ b/resume.tex
@@ -171,7 +171,7 @@
             \resumeItem{Experimented with relationships between emotional
                 context and television subtitles using NLP techniques}
             \resumeItem{Developed lost device tracking system with Raspberry
-                Pi by building Pseudo-GPS system with WIFi networks}
+                Pi by building Pseudo-GPS system with WiFi networks}
         \resumeItemListEnd
 	\resumeSubHeadingListEnd
 
@@ -183,7 +183,7 @@
             {Vice President, Head of Creative Department, Treasurer}
             {Sep 2020 -- Present}
         \resumeItemListStart
-            \resumeItem{Restructured organization by interiewing/onboarding new
+            \resumeItem{Restructured organization by interviewing/onboarding new
                 staff and creating new procedures}
             \resumeItem{Boosted and promoted member engagement by implementing
                 policies to increase member participation}
