hotfix: reword gtri ux enhancements

--- a/resume.tex
+++ b/resume.tex
@@ -91,7 +91,7 @@
         {github.com/shenkw1}\\
     \href{mailto:katherineshen@gatech.edu}
         {katherineshen@gatech.edu}
-		&(443) 766-2382 \\
+		&+1 (443) 766-2382 -- U.S. Citizen\\
 \end{tabular*}
 
 %-----------EDUCATION-----------------
@@ -140,8 +140,8 @@
             to React webpage with newer features}
             \resumeItem{Developed Python script to parse styling information
             from Excel sheet database in order to render on webpage}
-            \resumeItem{Added features to enhance user experience,
-            such as allowing users to add, remove, or edit emergency manuals}
+            \resumeItem{Enhanced user experience by adding features to allow
+                for adding, removing, and editing of emergency manuals}
         \resumeItemListEnd
 
         \resumeSubheading
