hotfix: use letter with 10pt font

--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{extarticle}
+\documentclass[letter,10pt]{extarticle}
 \usepackage{geometry}
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
