add tableau and sql to skills

--- a/resume.tex
+++ b/resume.tex
@@ -242,10 +242,10 @@
 \section{Skills Summary}
 	\resumeSubHeadingListStart
 		\resumeSubItem{Programming}
-			{\hspace{0.6mm}~~Python, Java, JavaScript, OpenGL, HTML/CSS, TypeScript, C, \LaTeX, Assembly (LC-3)}
+			{\hspace{0.6mm}~~Python, Java, JavaScript, OpenGL, HTML/CSS, TypeScript, SQL, C, \LaTeX, Assembly (LC-3)}
 		\resumeSubItem{Tools}
             {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Trello, Git, Adobe
-                Photoshop}
+                Photoshop, Tableau}
 		\resumeSubItem{Technologies}
 			{~~~~Websockets, API, Event Handling, React, Flask}
         \resumeSubItem{Languages}
