--- a/resume.tex
+++ b/resume.tex
@@ -129,6 +129,11 @@
 %         \resumeItem{Performed UX audits and built design systems to
 %         create dashboards for new datasets}
 %     \resumeItemListEnd
+        \resumeSubheading
+            {NCR Corporation}
+            {Atlanta, GA}
+            {Incoming Software Engineering Intern}
+            {May 2023 -- Aug 2023}
 
         \resumeSubheading
             {Georgia Tech Research Institute}
