rearrange skills and remove lc-3 from assembly

--- a/resume.tex
+++ b/resume.tex
@@ -204,7 +204,6 @@
 \section{Projects}
     \resumeSubHeadingListStart
     \vspace{1mm}
-
         \resumeProjectHeading
             {gamelettr}
             {Python, Websockets, Event Handling, REST APIs}
@@ -235,7 +234,7 @@
 \section{Skills Summary}
 	\resumeSubHeadingListStart
 		\resumeSubItem{Programming}
-			{\hspace{0.6mm}~~Python, Java, JavaScript, OpenGL, HTML/CSS, TypeScript, SQL, C, \LaTeX, Assembly (LC-3)}
+			{\hspace{0.6mm}~~Python, Java, JavaScript, TypeScript, OpenGL, HTML/CSS, SQL, C, \LaTeX, Assembly}
 		\resumeSubItem{Tools}
             {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Trello, Git, Adobe
                 Photoshop, Tableau}
