add aws, vip, update misc roles

--- a/resume.tex
+++ b/resume.tex
@@ -116,30 +116,33 @@
 
 \section{Experience}
 	\resumeSubHeadingListStart
-%     \resumeSubheading
-%         {Vertically Integrated Projects}
-%         {Atlanta, GA}
-%         {Getting to Know U - Provost Data Dashboard Design}
-%         {Aug 2022 -- Present}
-%     \resumeItemListStart
-%         \resumeItem{Analyzed Georgia Tech population distribution
-%         across different majors, credit hours, graduation rates, etc}
-%         \resumeItem{Iterated and improved existing dashboard designs
-%         already in the provost system}
-%         \resumeItem{Performed UX audits and built design systems to
-%         create dashboards for new datasets}
-%     \resumeItemListEnd
         \resumeSubheading
-            {NCR Corporation}
-            {Atlanta, GA}
-            {Incoming Software Engineering Intern}
+            {Amazon Web Services}
+            {East Palo Alto, CA}
+            {Incoming Software Development Intern}
             {May 2023 -- Aug 2023}
+
+        \resumeSubheading
+            {Vertically Integrated Projects}
+            {Atlanta, GA}
+            {Getting to Know U - Provost Data Dashboard Design}
+            {Aug 2022 -- Present}
+        \resumeItemListStart
+            \resumeItem{Analyzed Georgia Tech population distribution
+            across different majors, credit hours, graduation rates, etc}
+            \resumeItem{Iterated and improved existing dashboard designs
+            already in the provost system}
+            \resumeItem{Performed UX audits and built design systems to
+            create dashboards for new datasets}
+            \resumeItem{Led the React subteam to successfully transition
+            high fidelity wireframes into a webapp and implement user-friendly features}
+        \resumeItemListEnd
 
         \resumeSubheading
             {Georgia Tech Research Institute}
             {Atlanta, GA}
             {Research Assistant}
-            {Aug 2022 -- Present}
+            {Aug 2022 -- May 2023}
         \resumeItemListStart
             \resumeItem{Transitioned emergency procedure manual iPad application
             to React webpage with newer features}
@@ -185,7 +188,7 @@
         \resumeSubheading
             {GT Esports}
             {Atlanta, GA}
-            {Vice President, Head of Creative Department, Treasurer}
+            {Advisor, Vice President, Creative Department Head, Treasurer}
             {Sep 2020 -- Present}
         \resumeItemListStart
             \resumeItem{Restructured organization by interviewing/onboarding new
@@ -219,16 +222,16 @@
                     a stream link for upcoming matches for ease of viewing}
             \resumeItemListEnd
 
-        \resumeProjectHeading
-            {Energy Consumption Analysis (2020 HackGT 7)}
-            {Dash, Plotly.js, pandas, NumPy}
-            {}
-            \resumeItemListStart
-                \resumeItem{Built to a decision tree anomaly detection model
-                    built to detect energy usage anomalies}
-                \resumeItem{Visualized data output by from decision tree using Plotly
-                    graphs and a Dash app}
-            \resumeItemListEnd
+        % \resumeProjectHeading
+        %     {Energy Consumption Analysis (2020 HackGT 7)}
+        %     {Dash, Plotly.js, pandas, NumPy}
+        %     {}
+        %     \resumeItemListStart
+        %         \resumeItem{Built to a decision tree anomaly detection model
+        %             built to detect energy usage anomalies}
+        %         \resumeItem{Visualized data output by from decision tree using Plotly
+        %             graphs and a Dash app}
+        %     \resumeItemListEnd
     \resumeSubHeadingListEnd
 
 \section{Skills Summary}
