--- a/resume.tex
+++ b/resume.tex
@@ -106,10 +106,11 @@
                 Graphics \& Systems Engineering/Networking
 			}}}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Courses:}
-                \textit{Systems and Networks}, \textit{Intro to Databases}, 
+                \textit{Intro to Information Security},
+                \textit{Intro to Information Visualization}, 
+                Systems and Networks, Intro to Databases,
                 Algorithm Design, Computer Graphics,
-                Computer Architecture,
-                \hspace{\linewidth} \hspace*{41pt} Applied Combinatorics, Linear Algebra,
+                Computer Architecture, Applied Combinatorics, Linear Algebra,
                 Data Structures \& Algorithms, Object-Orientated Programming
 			}}}
 	\resumeSubHeadingListEnd
